# serializer version: 1
# name: test_get_connections
  dict({
    'current_streak': 0,
    'last_completed': datetime.date(2024, 9, 23),
    'max_streak': 2,
    'mistakes': dict({
      '0': 2,
      '1': 0,
      '2': 1,
      '3': 0,
      '4': 6,
    }),
    'puzzles_completed': 9,
    'puzzles_won': 3,
  })
# ---
# name: test_get_latest[latest.json]
  dict({
    'spelling_bee': dict({
      'puzzles_started': 87,
      'ranks': dict({
        'beginner': 23,
        'good': 21,
        'good_start': 14,
        'moving_up': 16,
        'nice': 4,
        'solid': 9,
      }),
      'total_pangrams': 15,
      'total_words': 362,
    }),
    'wordle': dict({
      'current_streak': 1,
      'games_played': 70,
      'games_won': 51,
      'guesses': dict({
        '1': 0,
        '2': 1,
        '3': 7,
        '4': 11,
        '5': 20,
        '6': 12,
        'fail': 19,
      }),
      'max_streak': 5,
    }),
  })
# ---
# name: test_get_latest[new_account.json]
  dict({
    'spelling_bee': None,
    'wordle': dict({
      'current_streak': 0,
      'games_played': 1,
      'games_won': 1,
      'guesses': dict({
        '1': 0,
        '2': 0,
        '3': 0,
        '4': 0,
        '5': 1,
        '6': 0,
        'fail': 0,
      }),
      'max_streak': 1,
    }),
  })
# ---
# name: test_get_latest[no_spelling_bee.json]
  dict({
    'spelling_bee': dict({
      'puzzles_started': 0,
      'ranks': dict({
        'beginner': 0,
        'good': 0,
        'good_start': 0,
        'moving_up': 0,
        'nice': 0,
        'solid': 0,
      }),
      'total_pangrams': 0,
      'total_words': 0,
    }),
    'wordle': dict({
      'current_streak': 0,
      'games_played': 1,
      'games_won': 1,
      'guesses': dict({
        '1': 0,
        '2': 0,
        '3': 0,
        '4': 0,
        '5': 1,
        '6': 0,
        'fail': 0,
      }),
      'max_streak': 1,
    }),
  })
# ---
